--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,10 @@
 
     {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+    <main>
 
         {{ content }}
 
-      </div>
     </main>
 
     {%- include footer.html -%}
