replace with liquid template lang

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
-  <p>Author: C. Guowei</p>
-  <p>E-mail: <a href="mailto:icgw@outlook.com">icgw@outlook.com</a>.</p>
+  <p>Author: {{ site.author }}</p>
+  <p>E-mail: <a href="mailto: {{ site.email | icgw@outlook.com }}">{{ site.email | icgw@outlook.com }}</a>.</p>
 </footer>
