--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-  {% include head.html %}
+
+  {%- include head.html -%}
+
   <body>
-    {% include header.html %}
+
+  {%- include header.html -%}
+
     <main>
       {{ content }}
     </main>
-  {% include footer.html %}
+
+  {%- include footer.html -%}
+
   </body>
 </html>
